firstpod.yml
apiVersion: v1
kind: Pod
metadata:
  name: firstpod
  namespace: krishan
  labels:
    app: home
spec:
  containers:
  - name: nginx
    image: nginx
    ports:
    - containerPort: 80  # added space between "-" and "containerPort"
